--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.holder{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content:space-around;
+}
+.item{
+	flex: 1;
+	border: 1px solid black;
+	padding: 10px;
+	text-align: center;
+}
